--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "Backend/server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"Backend/server.js",
-    "dev":"nodemon Backend/server.js"
+    "start": "Backend/server.js",
+    "dev": "nodemon Backend/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "capture-stack-trace": "^2.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
