--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,3 +1,4 @@
-
 PORT = 4000
 Mongo_URI=mongodb+srv://Salman97t:salman97t@cluster0.e3crplj.mongodb.net/Ecommerce
+JWT_SECRET = DHR345LJDF95JLFI5JKLDFKL34JFKG4
+JWT_EXPIRE = 1d
