--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -3,3 +3,6 @@ Mongo_URI=mongodb+srv://Salman97t:salman97t@cluster0.e3crplj.mongodb.net/Ecommer
 JWT_SECRET = DHR345LJDF95JLFI5JKLDFKL34JFKG4
 JWT_EXPIRE = 1d
 COOKIE_EXPIRE = 5
+SMPT_SERVICE = gmail
+SMPT_MAIL = salman97t@gmail.com
+SMPT_PASSWORD = akiw hejl faqm ywkw
